--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8) # Проверка версии CMake
 
 project(json_parse) # Название проекта
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall") # Устанавливаем необъодиыме флаги компиляции
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall") # Устанавливаем неободимые флаги компиляции
 set(JSON_EXE json.cpp) # Установка переменной со списком исходников для исполняемого файла
 
 # include_directories("include/") # показываем, где можно искать заголовочные файлы 
