--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall") # Устанавливаем неободимые флаги компиляции
 set(JSON_EXE json.cpp) # Установка переменной со списком исходников для исполняемого файла
 
-# include_directories("include/") # показываем, где можно искать заголовочные файлы 
+include_directories("include/") # показываем, где можно искать заголовочные файлы 
 
-add_library(my_library STATIC sources/son.cpp include/Json.h) # Создание статической библиотеки с именем my_library
+add_library(my_library STATIC sources/son.cpp Json.h) # Создание статической библиотеки с именем my_library
 
 add_executable(json sources/json.cpp) # Создает исполняемый файл с именем json
 
