--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.8) # Проверка версии CMake
 project(json_parse) # Название проекта
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+option(BUILD_TESTS "Build	 tests" OFF)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall") # Устанавливаем неободимые флаги компиляции
 set(JSON_EXE json.cpp) # Установка переменной со списком исходников для исполняемого файла
 
@@ -13,3 +15,12 @@ add_library(my_library STATIC sources/son.cpp) # Создание статиче
 add_executable(json sources/json.cpp) # Создает исполняемый файл с именем json
 
 target_link_libraries(json my_library)# Подключаем библиотеки к исполняемому файлу
+
+
+if(BUILD_TESTS)
+enable_testing()
+file(GLOB ${PROJECT_NAME}_TEST_SOURCES tests/*.cpp)
+add_executable(check ${${PROJECT_NAME}_TEST_SOURCES})
+target_link_libraries(check ${PROJECT_NAME} ${DEPENDS_LIBRARIES})
+add_test(NAME check COMMAND check "-s" "-r" "compact" "--use-colour" "yes") 
+endif()
