--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_TESTS "Build	 tests" OFF)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall") # Устанавливаем неободимые флаги компиляции
-set(JSON_EXE json.cpp) # Установка переменной со списком исходников для исполняемого файла
 
-include_directories("include/") # показываем, где можно искать заголовочные файлы 
-
-add_library(my_library STATIC sources/son.cpp) # Создание статической библиотеки с именем my_library
-
-add_executable(json sources/json.cpp) # Создает исполняемый файл с именем json
-
+add_library(my_library STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/son.cpp) # Создание статической библиотеки с именем my_library
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include) # показываем, где можно искать заголовочные файлы 
+add_executable(json ${CMAKE_CURRENT_SOURCE_DIR}/sources/json.cpp) # Создает исполняемый файл с именем json
 target_link_libraries(json my_library)# Подключаем библиотеки к исполняемому файлу
+
 
 
 if(BUILD_TESTS)
