--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fsanitize=address -O1 -Wall 
 # endif(CMAKE_COMPILER_IS_GNUCXX)
 
 # enum your files
-add_executable(executable
-  test.cpp
-)
+add_library(my_library STATIC json.hpp) # Создание статической библиотеки с именем my_library
+add_executable(json test.cpp) # Создает исполняемый файл с именем json
+target_link_libraries(json my_library)# Подключаем библиотеки к исполняемому файлу
+
 find_package (Threads)
 target_link_libraries(executable -fsanitize=address gtest ${CMAKE_THREAD_LIBS_INIT})
