--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fsanitize=address -O1 -Wall 
 # endif(CMAKE_COMPILER_IS_GNUCXX)
 
 # enum your files
-add_library(my_library STATIC json.hpp) # Создание статической библиотеки с именем my_library
+add_library(my_library STATIC json.cpp json.hpp) # Создание статической библиотеки с именем my_library
 add_executable(executable test.cpp) # Создает исполняемый файл с именем json
 
 find_package (Threads)
